# pyss

./: .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.md  environment.yml  notes_developmentSteps.md  pyproject.toml  requirements.txt  setup.py  user_guide.md
.github/workflows/: macos_unit_tests copy.yaml  run_dataset_generation.yaml  run_unit_tests.yaml  ubuntu_unit_tests.yaml  windows_unit_tests copy.yaml
jupyter_notebooks/: Untitled.ipynb  check_imports_nb.ipynb  trial_add_custom_stat.ipynb  trial_notebook.ipynb
jupyter_notebooks/pyspoc_trials/: check_imports_nb.ipynb  mymodule.py  trial_add_custom_stat.ipynb
jupyter_notebooks/synthetic_data_simulations/: blob_distCurve_metrics.ipynb  sklearn_cluster_explore.ipynb  sklearn_synthetic_data_eda.ipynb
pyspoc/: base.py  calculator.py  config.py  dataset.py  reducer.py  statistic.py
pyspoc/debugging/: debug_anm.py  debug_calc.py  debug_config_export.py  debug_internal.py  debug_rstatistic.py  debug_statistic.py  debug_yaml.py
pyspoc/lib/PhiToolbox/Phi/: phi_G_Gauss.m  phi_Gauss.m  phi_comp.m  phi_comp_probs.m
pyspoc/lib/PhiToolbox/utility/: data_to_probs.m
pyspoc/lib/PhiToolbox/utility/Gauss/: Cov_cond.m
pyspoc/lib/jidt/: license-gplv3.txt  readme.txt
pyspoc/reducers/: basic.py  norms.py
pyspoc/rstatistics/: pca.py  test.py
pyspoc/run_config/: fabfour.yaml  test_rstatistic.yaml  testing.yaml
pyspoc/statistics/: basic.py  causal.py  distance.py  misc.py
pyss/: __init__.py  base.py  calculator.py  config.py  dataset.py  reducer.py  settings.py  statistic.py
pyss/debugging/: debug_anm.py  debug_calc.py  debug_config.py  debug_config_export.py  debug_internal.py  debug_norms.py  debug_reducer.py  debug_rstatistic.py  debug_statistic.py  debug_yaml.py  tehe.yaml  woohoo.yaml
pyss/lib/PhiToolbox/Phi/: phi_star_Gauss.m
pyss/reducers/: basic.py  norms.py
pyss/rstatistics/: basic.py  pca.py  test.py
pyss/run_config/: test_rstatistic.yaml  testing.yaml
pyss/statistics/: basic.py  causal.py  distance.py  infotheory.py  misc.py
tests/: test_existing.py  test_yaml.py
working_analyses/hjResearch_2025/data/: .gitignore
working_analyses/hjResearch_2025/summary_stats/: distance_distrib_stats.py  feature_covariance_stats.py  mean_median_differences.py  mymodule.py  symmetry_stats.py
working_analyses/pyspoc_trial_and_setup/: trial_add_custom_stat.ipynb
(+8 files in other folders)
