[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["pyspoc*"]

[project]
name = "pyspoc"
version = "2.0.0"
authors = [
    { name ="Garry Cotton", email="garry.s.cotton@gmail.com"},
    { name ="cosmicbhejafry"},    
]

description = "Library for generating large volumes of statistical summaries on static datasets."
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.8"

dependencies = [
  "pytest",
  "h5py",
  "scikit-learn",
  "scipy",
  "numpy<2.0.0",
  "pandas",
  "pyarrow",
  "fastparquet",
  "statsmodels",
  "pyyaml",
  "tqdm",
  "hyppo",
  "jpype1",
  "dill",
  "cdt==0.5.23",
  "oct2py",
  "seaborn",
  "future"
]

classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Science/Research",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "black",
  "mypy",
  "coverage",
  "pre-commit"
]

notebooks = [
  "jupyter",
  "ipykernel",
  "matplotlib",
  "nb_conda_kernels"
]

# optionally:   "nbstripout"

[project.urls]
Repository = "https://github.com/cosmicbhejafry/py-spoc/"
